ontol/ontol-compiler/test-cases/error/domain/import_private_type.on
use 'dep' as dep
def bar (
    rel . 'foo': dep.foo // ERROR private definition
)

//@ src_name=dep
def @private foo ()
